---
source: inline/tests/parser/mod.rs
info: "Test 'ambiguous-start' from 'markup\\bold.yml'"
---
Plain @ (1:1)->(1:10) (
    The next 
    ^^^^^^^^^
)
Italic @ (1:10)->(1:34) (
    Bold @ (1:10)->(1:19) (
        Plain @ (1:13)->(1:17) (
            word
            ^^^^
        )
    )
    Plain @ (1:19)->(1:34) (
         is bolditalic.
        ^^^^^^^^^^^^^^^
    )
)

---
With input:

The next ***word** is bolditalic.


